# temporal

./: LICENSE.md  README.md
ml-api/: pyproject.toml
ml-api/tests/: test_ml_api.py
scraper/: .gitignore  index.js  out.csv  package-lock.json  package.json
semantic-search-api/: .gitignore  pyproject.toml  supervisord.conf
semantic-search-api/semantic-search-api/: crud.py  main.py  models.py
server/: index.js  package-lock.json  package.json
temporal-website/: next.config.js  package-lock.json  package.json  tailwind.config.js
temporal-website/components/: AddButton.js  Article.js  Footer.js  Illustration.js  Search.js  SimilarArticle.js  Spinner.js
temporal-website/components/modals/: SaveArticle.js
temporal-website/components/navbar/: index.js
temporal-website/pages/: _app.js  app.js  index.js  search.js
temporal-website/styles/: globals.css
temporal-website/utils/: getFaviconUrl.js
