[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Debabrata Mondal <debabrata.js@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
